--- a/apps/astro-app/src/layouts/Layout.astro
+++ b/apps/astro-app/src/layouts/Layout.astro
@@ -9,14 +9,14 @@ import { ViewTransitions } from 'astro:transitions';
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="description" content="Astro description" />
+    <meta name="description" content="Motorcycle navigation app" />
     <meta name="viewport" content="width=device-width" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <link rel="icon" type="image/svg+xml" href="/Moto.svg" />
     <meta name="generator" content={Astro.generator} />
-    <title>Positivus</title>
+    <title>Ridi to ride</title>
     <meta
       name="description"
-      content="A beautiful and functional landing page design created specifically for digital marketing agencies. With its clean and modern design, Positivus is the perfect template to showcase your agency's services and case studies to potential clients. Built with astro and tailwindcss"
+      content="Ridi is the ultimate motorcycle navigation app that puts you in control of your ride. Whether you crave curvy highways, serene green lanes, or rugged mountain tracks, Ridi crafts personalized routes tailored to your preferences. No more hours wasted poring over maps—just hop on your bike and let Ridi guide you to the perfect adventure."
     />
 	<link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300..700&display=swap" rel="stylesheet">
   <ViewTransitions />
