--- a/apps/astro-app/src/pages/index.astro
+++ b/apps/astro-app/src/pages/index.astro
@@ -1,8 +1,7 @@
 ---
 import Layout from '../layouts/Layout.astro';
 import Hero from '../components/Hero.astro';
-import Services from "../components/Services.astro"
-import Team from '../components/Team.astro';
+import Features from "../components/Features.astro"
 import Testimonial from '../components/Testimonial.astro';
 import Contact from '../components/Contact.astro';
 import Case from '../components/Case.astro';
@@ -11,10 +10,6 @@ import Case from '../components/Case.astro';
 <Layout title="Positivus">
 	<main class="space-y-20">
 		<Hero/>
-		<Services/>
-		<Case/>
-		<Team/>
-		<Testimonial/>
-		<Contact/>
+		<Features/>
 	</main>
 </Layout>
