--- a/apps/astro-app/src/components/Navbar.astro
+++ b/apps/astro-app/src/components/Navbar.astro
@@ -1,38 +1,48 @@
 ---
-import Container from "./Container.astro"
+import Container from "./Container.astro";
 import { Astronav, MenuItems, MenuIcon } from "astro-navbar";
 
 const menuitems = [
-  { href: '/', label: 'Home' },
-  { href: '/#features', label: 'Features' },
+  { href: "/", label: "Home" },
+  { href: "/#features", label: "Features" },
 ];
-
 ---
 
 <div class="mt-20">
-<nav class="w-full top-0 left-0 z-50 fixed bg-white">
-  <Container>
-  <header class="flex flex-col lg:flex-row justify-between items-center my-5">
-    <Astronav>
-      <div class="flex w-full lg:w-auto items-center justify-between">
-        <a href="/" class="flex items-center space-x-3 rtl:space-x-reverse">
-          <img src="/Name-tagline.svg" class="h-12" alt="Logo" />
-        </a>
-        <div class="block lg:hidden">
-          <MenuIcon class="w-8 h-8 text-black" />
-        </div>
-      </div>
-      <MenuItems class="hidden w-full lg:w-auto mt-2 lg:flex lg:mt-0">
-        <ul class="font-medium flex flex-col p-4 lg:p-0 mt-4 border rounded-lg lg:flex-row lg:space-x-8 lg:mt-0 lg:border-0">
-          {menuitems.map((item, index) => (
-            <li>
-                <a href={item.href} class="block py-2 px-3 text-black rounded lg:bg-transparent lg:p-0">{item.label}</a>
-            </li>
-          ))}
-        </ul>
-      </MenuItems>
-    </Astronav>
-  </header>
-</Container>
-</nav>
+  <nav class="w-full top-0 left-0 z-50 fixed bg-white">
+    <Container>
+      <header
+        class="flex flex-col lg:flex-row justify-between items-center my-5"
+      >
+        <Astronav>
+          <div class="flex w-full lg:w-auto items-center justify-between">
+            <a href="/" class="flex items-center space-x-3 rtl:space-x-reverse">
+              <img src="/Name-tagline.svg" class="h-12" alt="Logo" />
+            </a>
+            <div class="block lg:hidden">
+              <MenuIcon class="w-8 h-8 text-black" />
+            </div>
+          </div>
+          <MenuItems class="hidden w-full lg:w-auto mt-2 lg:flex lg:mt-0">
+            <ul
+              class="font-medium flex flex-col p-4 lg:p-0 mt-4 border rounded-lg lg:flex-row lg:space-x-8 lg:mt-0 lg:border-0"
+            >
+              {
+                menuitems.map((item, index) => (
+                  <li>
+                    <a
+                      href={item.href}
+                      class="block py-2 px-3 text-black rounded lg:bg-transparent lg:p-0"
+                    >
+                      {item.label}
+                    </a>
+                  </li>
+                ))
+              }
+            </ul>
+          </MenuItems>
+        </Astronav>
+      </header>
+    </Container>
+  </nav>
 </div>
