--- a/apps/astro-app/src/components/Navbar.astro
+++ b/apps/astro-app/src/components/Navbar.astro
@@ -28,7 +28,7 @@ const menuitems = [
               class="font-medium flex flex-col p-4 lg:p-0 mt-4 border rounded-lg lg:flex-row lg:space-x-8 lg:mt-0 lg:border-0"
             >
               {
-                menuitems.map((item, index) => (
+                menuitems.map((item) => (
                   <li>
                     <a
                       href={item.href}
