--- a/apps/astro-app/src/pages/index.astro
+++ b/apps/astro-app/src/pages/index.astro
@@ -2,13 +2,9 @@
 import Layout from "../layouts/Layout.astro";
 import Hero from "../components/Hero.astro";
 import Features from "../components/Features.astro";
-import Testimonial from "../components/Testimonial.astro";
-import Contact from "../components/Contact.astro";
-import Case from "../components/Case.astro";
 ---
 
-<!-- POSITIVUS Official Astro theme -->
-<Layout title="Positivus">
+<Layout>
   <main class="space-y-20">
     <Hero />
     <Features />
