--- a/apps/astro-app/src/components/Hero.astro
+++ b/apps/astro-app/src/components/Hero.astro
@@ -25,10 +25,10 @@ import Container from "./Container.astro";
           class="w-full justify-center md:justify-start items-center inline-flex"
         >
           <a
-            href="https://ridi.bike"
+            href="https://app.ridi.bike"
             target="_blank"
-            class="px-8 py-5 bg-zinc-900 hover:bg-white rounded-2xl text-center text-white hover:text-black border text-xl font-normal leading-7"
-            >Coming Soon
+            class="px-8 py-5 bg-[#f75835] hover:bg-white rounded-2xl text-center text-white hover:text-black border text-xl font-normal leading-7"
+            >Try the app now
           </a>
         </div>
       </div>
