fix: for validation

--- a/apps/astro-app/src/components/Navbar.astro
+++ b/apps/astro-app/src/components/Navbar.astro
@@ -5,8 +5,8 @@ import { Astronav, MenuItems, MenuIcon } from "astro-navbar";
 const menuitems = [
   { href: "/", label: "Home" },
   { href: "/#features", label: "Features" },
-  { href: "/privacy", label: "Privacy" },
-  { href: "/tos", label: "Terms of Service" },
+  { href: "/privacy/", label: "Privacy" },
+  { href: "/tos/", label: "Terms of Service" },
 ];
 ---
 
