--- a/apps/astro-app/src/components/Navbar.astro
+++ b/apps/astro-app/src/components/Navbar.astro
@@ -5,7 +5,7 @@ import { Astronav, MenuItems, MenuIcon } from "astro-navbar";
 const menuitems = [
   { href: "/", label: "Home" },
   { href: "/#features", label: "Features" },
-  { href: "https://ridi.bike/privacy/", label: "Privacy" },
+  { href: "https://ridi.bike/privacy/", label: "Privacy policy" },
   { href: "https://ridi.bike/tos/", label: "Terms of Service" },
 ];
 ---
