--- a/apps/astro-app/src/components/Hero.astro
+++ b/apps/astro-app/src/components/Hero.astro
@@ -34,7 +34,7 @@ import Container from "./Container.astro";
       </div>
     </div>
     <div class="flex items-center py-5 md:w-6/12 md:pb-20 md:pt-10">
-      <img src="/Hero.svg" width="100%" alt="Hero" />
+      <img src="/hero-image.png" width="100%" alt="Hero" />
     </div>
   </div>
 </Container>
