--- a/apps/astro-app/src/components/Features.astro
+++ b/apps/astro-app/src/components/Features.astro
@@ -60,7 +60,7 @@ import { cn } from "../utils.ts";
           >
             <div class="text-3xl font-medium">Get notified</div>
             <div class="md:hidden flex flex-col items-center justify-center">
-              <img src="/public/email.png" width="80%" alt="cat" />
+              <img src="/email.png" width="80%" alt="cat" />
             </div>
             <div class="text-lg font-normal">
               I will email you when big stuff happens
