--- a/apps/astro-app/src/components/Features.astro
+++ b/apps/astro-app/src/components/Features.astro
@@ -69,7 +69,7 @@ import { cn } from "../utils.ts";
           </div>
         </div>
         <div class="hidden md:grid justify-items-center -m-20">
-          <img src="/public/email.png" width="70%" alt="me" />
+          <img src="/email.png" width="70%" alt="me" />
         </div>
       </div>
     </div>
