--- a/apps/astro-app/src/components/Features.astro
+++ b/apps/astro-app/src/components/Features.astro
@@ -8,12 +8,7 @@ import { cn } from "../utils.ts";
 
 <Container>
   <div class="relative flex flex-col items-center" id="features">
-    <Topic
-      title="How it works"
-      description="Ridi is a motorcycle navigation app that creates personalized routes based on rider preferences. Users can specify the type of roads they want, such as curvy highways, green lanes, or mountain and forest tracks, and Ridi generates optimized routes tailored to these choices. Designed to eliminate the need for extensive route planning, the app allows motorcyclists to start their rides quickly while ensuring a more enjoyable and adventurous journey."
-    />
-
-    <div class="flex-row items-center py-5">
+    <div class="flex-row items-center py-5 mb-8">
       <div class="grid grid-cols-1 sm:grid-cols-1 md:grid-cols-2 gap-4">
         <!-- card start-->
         {
@@ -52,6 +47,10 @@ import { cn } from "../utils.ts";
       </div>
     </div>
 
+    <Topic
+      title="HOW IT WORKS?"
+      description="I want to ride, not navigate. So, I built Ridi, an app that takes all the guesswork out of it. You tell it what kind of roads you love – highways, primaries, unclassified’s, tracks, paths, residential? Gravel, sand? Smooth roads or tracks? Choose your style and it’ll whip up a perfect route tailored to your exact preferences. Or just choose one of the default rule sets. Whether it’s a quick spin through scenic roads or a heart-pounding journey through twisty paths, Ridi’s got you covered."
+    />
     <div class="flex-row items-center my-6 p-14 bg-zinc-100 rounded-[45px]">
       <div class="grid grid-cols-1 md:grid-cols-2 gap-4">
         <div class="flex-col justify-start items-center gap-[275px] flex">
