--- a/apps/astro-app/src/components/Hero.astro
+++ b/apps/astro-app/src/components/Hero.astro
@@ -7,19 +7,17 @@ import Container from "./Container.astro";
     class="relative flex flex-col-reverse items-center md:flex-row"
     id="hero"
   >
-    <div class="row items-center py-5 md:w-6/12 md:pb-20 md:pt-10">
+    <div class="row items-center py-5 md:w-6/12 md:pb-12 md:pt-10">
       <div class="text-left space-y-3">
         <h1
           class="text-5xl font-medium leading-none md:text-6xl text-center md:text-left"
         >
-          Ready, Set, <span class="text-[#f75835]">Ridi</span>: Your Perfect
-          Route, Every Time.
+          The motorcycle route app for your perfect route, every time.
         </h1>
         <p
           class="mt-6 mb-8 text-xl font-normal leading-7 sm:mb-12 text-center md:text-left"
         >
-          Riding made simple: No more poring over maps. Your dream route, ready
-          when you are.
+          Made to enjoy the ride, not to study maps.
         </p>
         <div
           class="w-full justify-center md:justify-start items-center inline-flex"
@@ -28,7 +26,8 @@ import Container from "./Container.astro";
             href="https://app.ridi.bike"
             target="_blank"
             class="px-8 py-5 bg-[#f75835] hover:bg-white rounded-2xl text-center text-white hover:text-black border text-xl font-normal leading-7"
-            >Try the app now
+          >
+            Generate your first route now
           </a>
         </div>
       </div>
