--- a/apps/astro-app/src/layouts/Layout.astro
+++ b/apps/astro-app/src/layouts/Layout.astro
@@ -3,6 +3,7 @@ import "../styles/global.css";
 import Navbar from "../components/Navbar.astro";
 import Footer from "../components/Footer.astro";
 import { ViewTransitions } from "astro:transitions";
+import PostHog from "../components/Posthog.astro";
 ---
 
 <!doctype html>
@@ -22,6 +23,7 @@ import { ViewTransitions } from "astro:transitions";
       href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300..700&display=swap"
       rel="stylesheet"
     />
+    <PostHog />
     <ViewTransitions />
   </head>
   <body class="bg-white font-SpaceGrotesk">
