--- a/apps/astro-app/src/layouts/Layout.astro
+++ b/apps/astro-app/src/layouts/Layout.astro
@@ -17,8 +17,17 @@ import PostHog from "../components/Posthog.astro";
     <title>Ridi to ride</title>
     <meta
       name="description"
-      content="Ridi is the ultimate motorcycle navigation app that puts you in control of your ride. Whether you crave curvy highways, serene green lanes, or rugged mountain tracks, Ridi crafts personalized routes tailored to your preferences. No more hours wasted poring over maps—just hop on your bike and let Ridi guide you to the perfect adventure."
+      content="Generate the perfect motorcycling route based based on your preferences with Ridi"
     />
+    <meta property="og:title" content="Ridi Motorcycle Routes" />
+    <meta
+      property="og:description"
+      content="Generate the perfect motorcycling route based based on your preferences with Ridi"
+    />
+    <meta property="og:image" content="hero-image.png" />
+    <meta property="og:url" content="https://ridi.bike" />
+    <meta property="og:type" content="website" />
+
     <link
       href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300..700&display=swap"
       rel="stylesheet"
