fix: url for image

--- a/apps/astro-app/src/layouts/Layout.astro
+++ b/apps/astro-app/src/layouts/Layout.astro
@@ -24,7 +24,7 @@ import PostHog from "../components/Posthog.astro";
       property="og:description"
       content="Generate the perfect motorcycling route based based on your preferences with Ridi"
     />
-    <meta property="og:image" content="hero-image.png" />
+    <meta property="og:image" content="/hero-image.png" />
     <meta property="og:url" content="https://ridi.bike" />
     <meta property="og:type" content="website" />
 
