--- a/apps/astro-app/src/components/Hero.astro
+++ b/apps/astro-app/src/components/Hero.astro
@@ -25,7 +25,7 @@ import Container from "./Container.astro";
           <a
             href="https://app.ridi.bike"
             target="_blank"
-            class="px-8 py-5 bg-[#f75835] hover:bg-white rounded-2xl text-center text-white hover:text-black border text-xl font-normal leading-7"
+            class="px-8 py-5 bg-[#f75835] hover:bg-white rounded-2xl text-center text-white border-black hover:text-black border text-xl font-normal leading-7"
           >
             Generate your first route now
           </a>
