--- a/apps/astro-app/src/pages/index.astro
+++ b/apps/astro-app/src/pages/index.astro
@@ -2,11 +2,15 @@
 import Layout from "../layouts/Layout.astro";
 import Hero from "../components/Hero.astro";
 import Features from "../components/Features.astro";
+import Pricing from "../components/Pricing.astro";
+import GetNotified from "../components/GetNotified.astro";
 ---
 
 <Layout>
-  <main class="space-y-20">
+  <main>
     <Hero />
     <Features />
+    <Pricing />
+    <GetNotified />
   </main>
 </Layout>
