--- a/apps/astro-app/src/components/Navbar.astro
+++ b/apps/astro-app/src/components/Navbar.astro
@@ -50,7 +50,7 @@ const menuitems = [
           target="_blank"
           class="px-4 py-2 bg-[#f75835] hover:bg-white rounded-lg text-center text-white hover:text-black border border-black text-xl font-normal leading-7"
         >
-          Log in
+          Open App
         </a>
       </header>
     </Container>
