--- a/apps/astro-app/src/components/Features.astro
+++ b/apps/astro-app/src/components/Features.astro
@@ -50,5 +50,16 @@ import { cn } from "../utils.ts";
       title="HOW IT WORKS"
       description="I want to ride, not navigate. So, I built Ridi, an app that takes all the guesswork out of it. You tell it what kind of roads you love – highways, primaries, unclassified’s, tracks, paths, residential? Gravel, sand? Smooth roads or tracks? Choose your style and it’ll whip up a perfect route tailored to your exact preferences. Or just choose one of the default rule sets. Whether it’s a quick spin through scenic roads or a heart-pounding journey through twisty paths, Ridi’s got you covered."
     />
+    <div
+      class="w-full justify-center md:justify-start items-center inline-flex"
+    >
+      <a
+        href="https://app.ridi.bike"
+        target="_blank"
+        class="px-8 py-5 bg-[#f75835] hover:bg-white rounded-2xl text-center text-white border-black hover:text-black border text-xl font-normal leading-7"
+      >
+        Try it now
+      </a>
+    </div>
   </div>
 </Container>
