chore: version updates

--- a/apps/astro-app/src/layouts/Layout.astro
+++ b/apps/astro-app/src/layouts/Layout.astro
@@ -41,7 +41,7 @@ const image = "https://ridi.bike/og-image.png";
     <GTag />
     <ClientRouter />
   </head>
-  <body class="bg-white font-SpaceGrotesk">
+  <body class="bg-white">
     <Navbar />
     <slot />
     <Footer />
