chore: article styling wip

--- a/apps/astro-app/src/components/Footer.astro
+++ b/apps/astro-app/src/components/Footer.astro
@@ -9,6 +9,10 @@ import Container from "./Container.astro";
         <div class="flex items-center space-x-3 rtl:space-x-reverse">
           <img class="w-32" src="/Logo.svg" alt="Logo" />
         </div>
+        <div class="flex flex-row gap-6">
+          <a href="/tos">Terms of Service</a>
+          <a href="/privacy">Privacy policy</a>
+        </div>
         <div class="flex mt-4 md:m-0">
           <div class="-mx-4">
             <span id="currentYear"></span> Made with <a
