--- a/apps/astro-app/src/components/Prose.astro
+++ b/apps/astro-app/src/components/Prose.astro
@@ -3,10 +3,9 @@
 ---
 
 <div
-  class="prose
-  prose-h1:font-bold prose-h1:text-xl
-  prose-a:text-blue-600 prose-p:text-justify prose-img:rounded-xl
-  prose-headings:underline"
+  class="size-full
+      prose prose-md
+      prose-blockquote:border-l-4 prose-blockquote:border-[#f75835]"
 >
   <slot />
 </div>
