--- a/apps/astro-app/src/components/Navbar.astro
+++ b/apps/astro-app/src/components/Navbar.astro
@@ -6,8 +6,7 @@ const menuitems = [
   { href: "/", label: "Home" },
   { href: "/#how-it-works", label: "How it works" },
   { href: "/#pricing", label: "Price" },
-  { href: "/privacy", label: "Privacy policy" },
-  { href: "/tos", label: "Terms of Service" },
+  { href: "/articles", label: "Articles" },
 ];
 ---
 
