--- a/apps/astro-app/src/pages/articles/index.astro
+++ b/apps/astro-app/src/pages/articles/index.astro
@@ -9,7 +9,7 @@ const articleList = await getCollection("articles");
   <main class="pt-32 pb-20">
     <div class="max-w-screen-xl mx-auto px-6 lg:px-8 xl:px-10">
       <div class="max-w-3xl mx-auto">
-        <h1 class="text-4xl font-medium mb-8">News</h1>
+        <h1 class="text-4xl font-medium mb-8">Articles</h1>
         {
           articleList.map((article) => (
         <a href=`/articles/${article.data.slug}`>
