feat: update 2 post

--- a/apps/astro-app/src/pages/articles/[slug].astro
+++ b/apps/astro-app/src/pages/articles/[slug].astro
@@ -71,7 +71,7 @@ const { Content } = await render(article);
             {article.data.title}
           </li>
         </ol>
-        <p class="text-sm text-gray-500 mt-2">
+        <p class="text-sm text-gray-500 my-2">
           Published: {article.data.publish_date.toISOString().slice(0, 10)}
         </p>
         <Prose>
