--- a/apps/astro-app/src/pages/articles/[slug].astro
+++ b/apps/astro-app/src/pages/articles/[slug].astro
@@ -44,7 +44,7 @@ const { Content } = await render(article);
           </li>
           <li class="inline-flex items-center">
             <a
-              class="flex items-center text-sm text-gray-500 hover:text-ridi-orange focus:outline-hidden focus:text-ridi-orange dark:text-neutral-500 dark:hover:text-ridiorange dark:focus:text-ridiorange"
+              class="flex items-center text-sm text-gray-500 hover:text-ridiorange focus:outline-hidden focus:text-ridiorange dark:text-neutral-500 dark:hover:text-ridiorange dark:focus:text-ridiorange"
               href="/articles"
             >
               Articles
