--- a/apps/astro-app/src/components/Features.astro
+++ b/apps/astro-app/src/components/Features.astro
@@ -32,7 +32,7 @@ const features: {
   },
   {
     title: "Calculates a 'fun' score",
-    desc: "Calculates a score based on how curvy the route is and how well it fits the ridiers style",
+    desc: "Calculates a score based on how curvy the route is and how well it fits the riders style",
     url: "",
     EntryIcon: Trophy,
     classCard: "bg-black text-white",
