--- a/apps/astro-app/src/pages/articles/index.astro
+++ b/apps/astro-app/src/pages/articles/index.astro
@@ -6,7 +6,10 @@ const articleList = await getCollection("articles");
 console.log({ articleList });
 ---
 
-<Layout>
+<Layout
+  title="Ridi Articles"
+  description="News, updates and other interesting stuff around Ridi"
+>
   <main class="pt-32 pb-20">
     <div class="max-w-screen-xl mx-auto px-6 lg:px-8 xl:px-10">
       <div
